force-app/main/default/objects/Pedido__c/Pedido__c.object-meta.xml
<CustomObject>
    <description>Pedidos de demo — dados reais pra o agente cruzar o bug de código com o impacto nos dados.</description>
    <label>Pedido</label>
    <pluralLabel>Pedidos</pluralLabel>
    <nameField>
        <displayFormat>PED-{00000}</displayFormat>
        <label>Nº do Pedido</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>