force-app/main/default/objects/Pedido__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <label>Cliente</label>
    <description>Nome do cliente/empresa do pedido.</description>
    <type>Text</type>
    <length>120</length>
</CustomField>