force-app/main/default/objects/Pedido__c/fields/Desconto__c.field-meta.xml
<CustomField>
    <fullName>Desconto__c</fullName>
    <label>Desconto</label>
    <description>Desconto aplicado ao pedido (calculado pelo CalculadoraPedido).</description>
    <type>Currency</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>