force-app/main/default/objects/Pedido__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email do Cliente</label>
    <description>PII — dado pessoal. Existe para exercitar a guarda de privacidade do agente.</description>
    <type>Email</type>
</CustomField>