force-app/main/default/objects/Pedido__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <description>Situação do pedido.</description>
    <type>Text</type>
    <length>40</length>
</CustomField>