force-app/main/default/objects/Pedido__c/fields/Valor__c.field-meta.xml
<CustomField>
    <fullName>Valor__c</fullName>
    <label>Valor</label>
    <description>Valor do pedido.</description>
    <type>Currency</type>
    <precision>10</precision>
    <scale>2</scale>
</CustomField>